--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -110,6 +110,7 @@ plugins/thunar-uca/thunar-uca-chooser.c
 plugins/thunar-uca/thunar-uca-context.c
 plugins/thunar-uca/thunar-uca-editor.c
 plugins/thunar-uca/thunar-uca-model.c
+plugins/thunar-uca/thunar-uca-parser.c
 plugins/thunar-uca/thunar-uca-plugin.c
 plugins/thunar-uca/thunar-uca-provider.c
 plugins/thunar-uca/uca.xml.in
