--- a/configure.ac.in
+++ b/configure.ac.in
@@ -233,6 +233,8 @@ docs/papers/Makefile
 docs/reference/Makefile
 docs/reference/thunarx/Makefile
 docs/reference/thunarx/version.xml
+docs/reference/thunar/Makefile
+docs/reference/thunar/version.xml
 examples/Makefile
 examples/tex-open-terminal/Makefile
 icons/Makefile
