--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ docs/reference/thunarx/thunarx-undeclared.txt
 docs/reference/thunarx/thunarx-undocumented.txt
 docs/reference/thunarx/thunarx-unused.txt
 docs/reference/thunarx/thunarx.args
+docs/reference/thunarx/thunarx.actions
 docs/reference/thunarx/thunarx.hierarchy
 docs/reference/thunarx/thunarx.interfaces
 docs/reference/thunarx/thunarx.prerequisites
@@ -66,6 +67,27 @@ docs/reference/thunarx/version.xml
 docs/reference/thunarx/tmpl/*.bak
 docs/reference/thunarx/tmpl/.*.swp
 docs/reference/thunarx/tmpl/thunarx-unused.sgml
+docs/reference/thunar/xml
+docs/reference/thunar/html
+docs/reference/thunar/*.stamp
+docs/reference/thunar/.*.swp
+docs/reference/thunar/*.bak
+docs/reference/thunar/thunar-decl-list.txt
+docs/reference/thunar/thunar-decl.txt
+docs/reference/thunar/thunar-overrides.txt
+docs/reference/thunar/thunar-undeclared.txt
+docs/reference/thunar/thunar-undocumented.txt
+docs/reference/thunar/thunar-unused.txt
+docs/reference/thunar/thunar.args
+docs/reference/thunar/thunar.actions
+docs/reference/thunar/thunar.hierarchy
+docs/reference/thunar/thunar.interfaces
+docs/reference/thunar/thunar.prerequisites
+docs/reference/thunar/thunar.signals
+docs/reference/thunar/version.xml
+docs/reference/thunar/tmpl/*.bak
+docs/reference/thunar/tmpl/.*.swp
+docs/reference/thunar/tmpl/thunar-unused.sgml
 examples/.*.swp
 examples/tex-open-terminal/.*.swp
 icons/.*.swp
