Ignore generated files

--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,9 @@ docs/reference/thunar/.*.swp
 docs/reference/thunar/*.bak
 docs/reference/thunar/thunar-decl-list.txt
 docs/reference/thunar/thunar-decl.txt
+docs/reference/thunar/thunar-header.txt
 docs/reference/thunar/thunar-overrides.txt
+docs/reference/thunar/thunar-sections.txt
 docs/reference/thunar/thunar-undeclared.txt
 docs/reference/thunar/thunar-undocumented.txt
 docs/reference/thunar/thunar-unused.txt
