Fix thunar.a build bug

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ docs/reference/thunar/thunar-decl-list.txt
 docs/reference/thunar/thunar-decl.txt
 docs/reference/thunar/thunar-header.txt
 docs/reference/thunar/thunar-overrides.txt
+docs/reference/thunar/thunar-scan.c
 docs/reference/thunar/thunar-sections.txt
 docs/reference/thunar/thunar-undeclared.txt
 docs/reference/thunar/thunar-undocumented.txt
