--- a/thunar/Makefile.am
+++ b/thunar/Makefile.am
@@ -211,6 +211,7 @@ thunar_CFLAGS =								\
 	$(LIBNOTIFY_CFLAGS)						\
 	$(LIBSM_CFLAGS)							\
 	$(LIBXFCE4UI_CFLAGS)						\
+	$(LIBXFCE4KBD_PRIVATE_CFLAGS) \
 	$(XFCONF_CFLAGS)						\
 	$(PANGO_CFLAGS)							\
 	$(PLATFORM_CFLAGS)
@@ -229,6 +230,7 @@ thunar_LDADD =								\
 	$(LIBNOTIFY_LIBS)						\
 	$(LIBSM_LIBS)							\
 	$(LIBXFCE4UI_LIBS)						\
+	$(LIBXFCE4KBD_PRIVATE_LIBS) \
 	$(XFCONF_LIBS)							\
 	$(PANGO_LIBS)
 
